Kubernetes/Day-36/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-demo-service
                port:
                  number: 80
